delete aside, footer and header. show clock.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 </head>
 
 <body>
-  <header id="bench-top"></header>
-  <aside id="bench-left"></aside>
-  <section id='bench-container'><section/>
-
+  <section id='clock'></section>
   <!--
   <script src="bower_components/ractive/ractive-legacy.js"></script>
   <script src="bower_components/ractive-events-tap/ractive-events-tap.js"></script>
