add log component.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang='en-GB'>
+
 <head>
   <meta charset='utf-8'>
   <title>workbench</title>
@@ -8,12 +9,13 @@
 </head>
 
 <body>
-  <section id='clock'></section>
+  <section id="main"></section>
   <!--
   <script src="bower_components/ractive/ractive-legacy.js"></script>
   <script src="bower_components/ractive-events-tap/ractive-events-tap.js"></script>
   -->
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/foundation/js/foundation.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
   <script src='build/bundle.js'></script>
 </body>
